<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_2x"
        android:text="@string/lbl_payment"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_header"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/holo_blue_light" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnPayPal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_by_paypal"
            android:textColor="@color/blue_demoapp"
            android:textSize="@dimen/text_size_title" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/btnPayCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/lbl_paybycash"
            android:textColor="@color/blue_demoapp"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>

</LinearLayout>