<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:gravity="center">

        <com.hcpt.taxinear.widget.TextViewFontAwesome style="@style/title_circle_full" />

        <com.hcpt.taxinear.widget.TextViewRaleway
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_request_by_passenger"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <com.hcpt.taxinear.widget.TextViewFontAwesome style="@style/title_circle" />


        <com.hcpt.taxinear.widget.TextViewFontAwesome style="@style/title_circle" />

        <com.hcpt.taxinear.widget.TextViewFontAwesome style="@style/title_circle" />

        <com.hcpt.taxinear.widget.TextViewFontAwesome style="@style/title_circle" />


    </LinearLayout>

    <com.hcpt.taxinear.widget.TextViewRaleway
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/lbl_waiting_for_request"
        android:textColor="@color/message_header"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnOffline"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_vertical_xxlarge"
        android:background="@color/yeallow_demoapp"
        android:gravity="center"
        android:text="@string/lbl_offline"
        android:textColor="@color/white" />

    <com.hcpt.taxinear.widget.TextViewRaleway
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/lblAlwayOnline"
        android:textColor="@color/yellow_dark"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


</LinearLayout>