<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_demoapp"
    android:orientation="vertical"
    android:paddingTop="@dimen/space_tiny">

    <LinearLayout
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/yeallow_demoapp"

        android:orientation="horizontal"
        android:weightSum="10">

        <com.hcpt.taxinear.widget.TextViewFontAwesome
            android:id="@+id/ic_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_normal"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center_vertical|left"
            android:text="@string/ic_car"
            android:textColor="@color/blue_demoapp"
            android:textSize="@dimen/text_size_normal" />

        <com.hcpt.taxinear.widget.TextViewRaleway
            android:id="@+id/txtTimeTo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.0"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:text="@string/lbl_name_passenger"
            android:textColor="@color/blue_demoapp"
            android:textSize="@dimen/text_size_normal" />

        <com.hcpt.taxinear.widget.TextViewRaleway
            android:id="@+id/txtTotalPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.0"
            android:background="@color/blue"
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="+423"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xlarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_transaction_id"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTripId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="2343"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_seat"

                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLinkTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text=""
                android:textColor="@color/white"

                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_from_a"

                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPlaceGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"

                android:text="@string/demo_place"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_to_b"

                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"

                android:text="@string/demo_destination"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_time"

                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text=""
                android:textColor="@color/white"

                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_distance"

                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"

                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_tiny"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lbl_payment_method2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>